# content-moderation-service

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  build.sh  pyproject.toml  requirements.txt  test_chunking_strategy.py  test_confidence_fix.py
performance_tests/: locustfile.py
scripts/: download_model.py  download_models.py  load_model.py
src/: main.py
src/api/v1/: image_moderation.py  language_controller.py  profanity_controller.py  text_chunking_controller.py  text_moderation.py
src/core/: config.py  logger.py  logging.conf  middleware.py  rate_limiter.py
src/data/: __init__.py  constants.py
src/routes/: api.py
src/schemas/: base.py  moderation.py  requests.py  responses.py
src/services/: kafka_service.py  language_detection_service.py  language_service.py  profanity_service.py  role_mapping_service.py  text_chunking_service.py  text_profanity_service.py  vision_service.py
src/services/kafka/: producer.py
src/utils/: __init__.py  helpers.py  kafka_utils.py
